[flake8]
max-line-length = 89

[tool:pytest]
python_files=test*.py
addopts = --verbose --ds=seed_stage_based_messaging.testsettings --ignore=ve

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENCE

[isort]
line_length = 88
# Vertical hanging indent, for black
multi_line_output = 3
include_trailing_comma = True
